<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/who_do_you_think_will_win"
        android:textColor="@color/primary_text"
        android:textSize="28sp" />

    <Spinner
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:id="@+id/poll_spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/team_names" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/poll_dialog_submit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/pill_button"
                android:fontFamily="@font/roboto_light"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/poll_dialog_close"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/pill_button"
                android:fontFamily="@font/roboto_light"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>